INFORCRM-17768: Fixed issue where quick actions list was hidden by the header or user was unable to scroll through the list of actions

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -635,6 +635,7 @@ body {
         height: 18px;
         vertical-align: middle;
     }
+    z-index: 10;
 }
 
 .link-view {
