--- a/content/css/themes/crm/sohoreset.less
+++ b/content/css/themes/crm/sohoreset.less
@@ -66,9 +66,6 @@ span {
     position: absolute; // allows pull-to-refresh to be tucked beneath header
     z-index: 11;
 }
-.page-container {
-    z-index: 10;
-}
 
 .edit-row {
   .columns {
